try to fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,12 @@
 * {
   margin: 0px;
   padding: 0px;
+  border: 0px;
 }
 
 
 body {
-  background: var(--background);
+  /* background: var(--background); */
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 1.13em;
   color: var(--text);
@@ -26,7 +27,7 @@ body {
   z-index: 1;
   top: 0px;
   background: var(--nav);
-  width: 100%;
+  width: 80%;
   height: 5em;
   display: flex;
   flex-direction: row;
@@ -96,7 +97,7 @@ h1 {
 
 #overview {
   position: relative;
-  width: 100%;
+  width: 80%;
   padding-top: 4em;
 }
 
@@ -109,8 +110,15 @@ h1 {
   font-size: 2em;
 }
 
+@media (max-width: 500px) {
+  .img-overview-overlay-text {
+    font-size: 1em;
+  }
+
+}
+
 .overview {
-  width: 100%;
+  width: 80%;
 }
 
 .blurb {
@@ -142,11 +150,11 @@ h1 {
 #techspecs {
   position: relative;
   background: white;
-  width: 100%;
+  width: 80%;
 }
 
 .tech-specs {
-  width: 100%;
+  width: 80%;
 }
 
 #img-overview-overlay-specs {
